--- a/sample_config.env
+++ b/sample_config.env
@@ -2,7 +2,7 @@
 
 ## COMPULSORY VARIABLES ##
 
-TG_BOT_TOKEN1 = ""
+TG_BOT_TOKEN1 = "5934794528:AAGjv3Tz_IsglL72p-wj70tzbJwrMhQOf9k"
 APP_ID1 =
 API_HASH1 = ""
 OWNER_ID =
