--- a/sample_config.env
+++ b/sample_config.env
@@ -3,9 +3,9 @@
 ## COMPULSORY VARIABLES ##
 
 TG_BOT_TOKEN1 = "5934794528:AAGjv3Tz_IsglL72p-wj70tzbJwrMhQOf9k"
-APP_ID1 =
-API_HASH1 = ""
-OWNER_ID =
+APP_ID1 =17469290
+API_HASH1 = "93545fee949cc53825fb783b2b3d7ff4"
+OWNER_ID =5201878605
 AUTH_CHANNEL = ""
 
 ## NON COMPULSORY VARIABLES ##
