--- a/sample_config.env
+++ b/sample_config.env
@@ -46,9 +46,9 @@ MAX_TIME_TO_WAIT_FOR_TORRENTS_TO_START =
 SPLIT_SIZE = ""
 
 # Vars for the Display Progress
-FINISHED_PROGRESS_STR = ""
-HALF_FINISHED = ""
-UN_FINISHED_PROGRESS_STR = ""
+FINISHED_PROGRESS_STR = "●"
+HALF_FINISHED = "○"
+UN_FINISHED_PROGRESS_STR = "○"
 
 #Bot Commands
 LEECH_COMMAND = ""
@@ -65,18 +65,18 @@ GPYTDL_COMMAND = ""
 #Bot Command [RClone]
 RCLONE_CONF_URL = ""
 DESTINATION_FOLDER = ""
-INDEX_LINK = ""
+INDEX_LINK = "https://aakash-leech-1.aakashmirrorleech1.workers.dev/0:"
 GET_SIZE_G = ""
 CLONE_COMMAND_G = ""
 TELEGRAM_LEECH_COMMAND = ""
 TELEGRAM_LEECH_UNZIP_COMMAND = ""
 
 #Bot Command [Miscs]
-STATUS_COMMAND = ""
-SAVE_THUMBNAIL = ""
-CLEAR_THUMBNAIL = ""
-UPLOAD_AS_DOC = ""
-LOG_COMMAND = ""
+STATUS_COMMAND = "status"
+SAVE_THUMBNAIL = "savethumbnail"
+CLEAR_THUMBNAIL = "clearthumbnail"
+UPLOAD_AS_DOC = "upload_as_doc"
+LOG_COMMAND = "log"
 USER_DTS = ""
 
 # Telegraph Creds
@@ -84,18 +84,18 @@ TGH_AUTHOR = ""
 TGH_AUTHOR_URL = ""
 
 #Bot Command [Custom Bot Cmd Name]
-SET_BOT_COMMANDS = ""
-UPLOAD_COMMAND = ""
-RENEWME_COMMAND = ""
-RENAME_COMMAND = ""
-TOGGLE_VID = ""
-TOGGLE_DOC = ""
-RCLONE_COMMAND = ""
-HELP_COMMAND = ""
-SPEEDTEST = ""
-TSEARCH_COMMAND = ""
-MEDIAINFO_CMD = ""
-CAP_STYLE = ""
+SET_BOT_COMMANDS = "True"
+UPLOAD_COMMAND = "upload"
+RENEWME_COMMAND = "renewme"
+RENAME_COMMAND = "rename"
+TOGGLE_VID = "toggle_vid"
+TOGGLE_DOC = "toggle_doc"
+RCLONE_COMMAND = "rclone"
+HELP_COMMAND = "help"
+SPEEDTEST = "speedtest"
+TSEARCH_COMMAND = "tsearch"
+MEDIAINFO_CMD = "mediainfo"
+CAP_STYLE = "BOLD"
 BOT_NO = ""
 
 #Bot Command [Token Utils]
