--- a/sample_config.env
+++ b/sample_config.env
@@ -6,7 +6,7 @@ TG_BOT_TOKEN1 = "5934794528:AAGjv3Tz_IsglL72p-wj70tzbJwrMhQOf9k"
 APP_ID1 =17469290
 API_HASH1 = "93545fee949cc53825fb783b2b3d7ff4"
 OWNER_ID =5201878605
-AUTH_CHANNEL = ""
+AUTH_CHANNEL = "-1001850147969"
 
 ## NON COMPULSORY VARIABLES ##
 
