--- a/sample_config.env
+++ b/sample_config.env
@@ -3,9 +3,9 @@
 ## COMPULSORY VARIABLES ##
 
 TG_BOT_TOKEN1 = "5934794528:AAGjv3Tz_IsglL72p-wj70tzbJwrMhQOf9k"
-APP_ID1 =17469290
+APP_ID1 = "17469290"
 API_HASH1 = "93545fee949cc53825fb783b2b3d7ff4"
-OWNER_ID =5201878605
+OWNER_ID = "5201878605"
 AUTH_CHANNEL = "-1001850147969"
 
 ## NON COMPULSORY VARIABLES ##
@@ -51,45 +51,45 @@ HALF_FINISHED = "○"
 UN_FINISHED_PROGRESS_STR = "○"
 
 #Bot Commands
-LEECH_COMMAND = ""
-LEECH_UNZIP_COMMAND = ""
-LEECH_ZIP_COMMAND = ""
-GLEECH_COMMAND = ""
-GLEECH_UNZIP_COMMAND = ""
-GLEECH_ZIP_COMMAND = ""
-YTDL_COMMAND = ""
-GYTDL_COMMAND = ""
-PYTDL_COMMAND = ""
-GPYTDL_COMMAND = ""
+LEECH_COMMAND = "leech"
+LEECH_UNZIP_COMMAND = "leechunzip"
+LEECH_ZIP_COMMAND = "leechzip"
+GLEECH_COMMAND = "gleech"
+GLEECH_UNZIP_COMMAND = "gleechunzip"
+GLEECH_ZIP_COMMAND = "gleechzip"
+YTDL_COMMAND = "ytdl"
+GYTDL_COMMAND = "gytdl"
+PYTDL_COMMAND = "pytdl"
+GPYTDL_COMMAND = "gpytdl"
 
 #Bot Command [RClone]
 RCLONE_CONF_URL = ""
 DESTINATION_FOLDER = ""
 INDEX_LINK = "https://aakash-leech-1.aakashmirrorleech1.workers.dev/0:"
 GET_SIZE_G = ""
-CLONE_COMMAND_G = ""
-TELEGRAM_LEECH_COMMAND = ""
-TELEGRAM_LEECH_UNZIP_COMMAND = ""
+CLONE_COMMAND_G = "gclone"
+TELEGRAM_LEECH_COMMAND = "tleech"
+TELEGRAM_LEECH_UNZIP_COMMAND = "tleechunzip"
 
 #Bot Command [Miscs]
 STATUS_COMMAND = "status"
 SAVE_THUMBNAIL = "savethumbnail"
 CLEAR_THUMBNAIL = "clearthumbnail"
-UPLOAD_AS_DOC = "upload_as_doc"
+UPLOAD_AS_DOC = ""
 LOG_COMMAND = "log"
 USER_DTS = ""
 
 # Telegraph Creds
-TGH_AUTHOR = ""
-TGH_AUTHOR_URL = ""
+TGH_AUTHOR = "Aakash"
+TGH_AUTHOR_URL = "https://t.me/Moviez_Express_Official"
 
 #Bot Command [Custom Bot Cmd Name]
 SET_BOT_COMMANDS = "True"
 UPLOAD_COMMAND = "upload"
 RENEWME_COMMAND = "renewme"
 RENAME_COMMAND = "rename"
-TOGGLE_VID = "toggle_vid"
-TOGGLE_DOC = "toggle_doc"
+TOGGLE_VID = "togglevid"
+TOGGLE_DOC = "toggledoc"
 RCLONE_COMMAND = "rclone"
 HELP_COMMAND = "help"
 SPEEDTEST = "speedtest"
@@ -102,7 +102,7 @@ BOT_NO = ""
 UPTOBOX_TOKEN = ""
 EMAIL = ""
 PWSSD = ""
-GDRIVE_FOLDER_ID = ""
+GDRIVE_FOLDER_ID = "0AODrCHBMm3oDUk9PVA"
 CRYPT = ""
 HUB_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
@@ -123,20 +123,20 @@ CUSTOM_PREFIX = ""
 CUSTOM_SUFFIX = ""
 
 #Credits [Bot Utils]
-UPDATES_CHANNEL = ""
+UPDATES_CHANNEL = "https://t.me/Moviez_Express_Official"
 
 #Start Buttons
-START_BTN1 = ""
-START_URL1 = ""
-START_BTN2 = ""
-START_URL2 = ""
+START_BTN1 = "❤️ Owner"
+START_URL1 = "https://t.me/Aakash_1256"
+START_BTN2 = "🖇 Join"
+START_URL2 = "https://t.me/Moviez_Express_Official"
 
 #Bot Command [Bot PM & Log Channel]
-AUTO_LEECH = ""
-LEECH_LOG = ""
+AUTO_LEECH = "False"
+LEECH_LOG = "-1001893074322"
 EX_LEECH_LOG = ""
 EXCEP_CHATS = ""
-BOT_PM = ""
+BOT_PM = "True"
 
 # 4GB Upload Utils
 PRM_USERS = ""
@@ -151,8 +151,8 @@ BOT_LANG = ""
 FSUB_CHANNEL = ""
 
 # Random Quotes, Restart Utils
-TIMEZONE = ""
-RDM_QUOTE = ""
+TIMEZONE = "Asia/kolkata"
+RDM_QUOTE = "False"
 
 # Status Pictures, Photos API
 PICS = "" 
