--- a/sample_config.env
+++ b/sample_config.env
@@ -38,7 +38,7 @@ DEF_THUMB_NAIL_VID_S = ""
 SP_LIT_ALGO_RITH_M = "hjs"
 
 # Database Handler
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://myaakashbot173:myaakashbot182@cluster0.cj43nlj.mongodb.net/?retryWrites=true&w=majority"
 
 # Internal Requirements
 EDIT_SLEEP_TIME_OUT = 10
